--- a/static/index.html
+++ b/static/index.html
@@ -1,63 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:v-on="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>To do list</title>
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="start()">
 <div id="app">
     <header class="centered">
         <span><img src="Untitled.png" alt="ToDo" style="width:50px;"> ToDo</span>
     </header>
     <main>
-        <div class="wrapper login" v-if="step === 'login'">
-            <h1>Account access</h1>
-            <div class="LoginInput">
-                <label>
-                    <input v-model="login" type="text" placeholder="yaropolk@example.com" autofocus required>
-                </label>
-                <label>
-                    <input v-model="pass" type="password" placeholder="******" autofocus required>
-                </label>
-            </div>
-            <div class="LoginButton">
-                <div>
-                    <button id="reg" @click="register">Registration</button>
-                    <button id="log" @click="logIn">Sign in</button>
-                </div>
-                <div>
-                    <button id="set">Settings</button>
-                </div>
-            </div>
+        <div id="wrapper" class="wrapper">
         </div>
-        <div class="wrapper" v-else-if="step === 'items'">
-            <h3>Add a new task:</h3>
-            <label class="add_todo">
-                <input @keyup.enter="addTask" class="new_todo" autofocus autocomplete="on"
-                       placeholder="walk the neighbor's cat"
-                       type="text" v-model="new_task.text">
-                <span><button @click="addTask" class="button new_todo_button">Add</button></span>
-            </label>
-            <h3 class="status_title">{{'Active tasks: ' + tasks.length}}</h3>
-            <task @task_del="deleteTask(task.id)"
-                  @task_edit="editTask(index)"
-                  @task_done="markAsDone(index, task.id)"
-                  @save="save(index, task.id)"
-                  @disable="disable(index)"
-                  :data="task"
-                  :index="index+1"
-                  v-for="(task, index) in tasks"
-                  :key="index"></task>
-
-            <hr>
-            <button @click="logout" class="logout">Log out &#128682;</button>
-        </div>
-        <div class="wrapper" v-else-if="step === 'error'">
-            An error occurred. Open the developer console to view the details.
-        </div>
-
     </main>
 </div>
 <script>
