--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <title>To do list</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body onload="start()">
+<body onload="getTasks()">
 <div id="app">
     <header class="centered">
         <span><img src="Untitled.png" alt="ToDo" style="width:50px;"> ToDo</span>
